--- a/css/style.css
+++ b/css/style.css
@@ -660,8 +660,9 @@ progress {
     max-width: 1320px;
   }
 }
-.row {
-  --bs-gutter-x: 1.5rem;
+
+.row {	
+	padding:0 0;
   --bs-gutter-y: 0;
   display: flex;
   flex-wrap: wrap;
@@ -669,6 +670,8 @@ progress {
   margin-right: calc(-.5 * var(--bs-gutter-x));
   margin-left: calc(-.5 * var(--bs-gutter-x));
 }
+
+
 .row > * {
   flex-shrink: 0;
   width: 100%;
