--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -1,5 +1,11 @@
 @use "../custom" as *;
 
+.container-1 {
+	// width: 100%;
+	--bs-gutter-x: -1.5rem;
+
+}
+
 .services {
 	position: relative;
 	padding: 1rem 0;
